--- a/css/style.css
+++ b/css/style.css
@@ -439,18 +439,17 @@ html{
     margin-top: 33px;
 }
 .howto_item{
-    max-width: 253px;
+    flex: 0 0 253px;
 }
 .howto_wrapper_sm{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    margin: 0 -15px;
     padding-bottom: 46px;
 }
 .howto_item_sm{
+    flex: 0 0 250px;
     margin-top: 26px;
-    max-width: 253px;
     padding: 0 15px;
 }
 .howto_title{
@@ -492,8 +491,9 @@ html{
 /* carousel */
 
 .reviews_carousel{
-    position: relative;
     margin-top: 31px;
+    position: relative;
+   
 }
 .carousel_item{
     display: block;
@@ -508,8 +508,8 @@ html{
 }
 .slick-arrow.slick-next{
     position: absolute;
-    left: 680px;
-    top:20%;
+    right: 35%;
+    top:10%;
     border: none;
     width: 14px;
     height: 46px;
@@ -517,8 +517,8 @@ html{
 }
 .slick-arrow.slick-prev{
     position: absolute;
-    left: 450px;
-    top: 20%;
+    left: 35%;
+    top: 10%;
     z-index: 1;
     border: none;
     width: 14px;
@@ -753,7 +753,28 @@ html{
     .managment_subtitle{
         font-size: calc(15px + 4 * ((100vw - 320px) / (1140 - 320)));
     }
-    
+    .howto_wrapper{
+        justify-content: center;
+    }
+    .howto_wrapper_sm{
+        justify-content: center;
+    }
+    .howto_item{
+        flex: 0 0 300px;
+    }
+    .howto_item_sm{
+        flex: 0 0 300px; 
+    }
+    .howto_wrapper_sm .howto_item_sm{
+        padding: 0;
+        width: 270px;
+    }
+    .slick-arrow.slick-next{
+        right: 25%;
+    }
+    .slick-arrow.slick-prev{
+        left: 25%;
+    }
 }
 
 @media (min-width: 591px) and (max-width: 1145px){
