--- a/css/style.css
+++ b/css/style.css
@@ -25,10 +25,14 @@ html{
     font-weight: 400;
     color: #ffffff;
     text-decoration: none;
+    padding-bottom: 5px;
+}
+.menu a:hover{
+    color: #ec644b;
+    border-bottom: 1px solid #ec644b;
 }
 .menu_wrapper li{
     font-size: 19px;
- 
     font-weight: 700;
     color: #ffffff;
 }
@@ -551,16 +555,164 @@ html{
 .feedback{
     background: url('../img/bg/bg4.jpg') center center/cover no-repeat;
 }
-.feedback_container{
-    width: 896px;
+.feedback_title{
+    font-size: 19px;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #ffffff;
+    text-align: center;
+    padding-top: 20px;
+}
+.feedback_subtitle{
+    font-size: 14px;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: #ffffff;
+    text-align: center;
+    padding-bottom: 19px;
+    margin-top: 5px;
+}
+.title_wrapper{
+    background-color: #25333c;
 }
 .feedback_wrapper{
-    display: flex;
+    max-width: 896px;
+    margin: 0 auto;
+    padding: 62px 0 79px 0;
 }
+.feedback_wrapper form{
+    background-color: rgba(255, 255, 255, 0.7);
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.feedback_wrapper form input{
+    width: 268px;
+    height: 45px;
+    background-color: #ffffff;
+    border: 1.0px solid rgba(0,0,0,0.21);
+    color: color: #101010;
+    font-size: 13px;
+    font-weight: 300;
+    border-radius: 30px;
+    padding-left: 25px;
+    box-sizing: border-box;
+    margin: 18px 0 8px 0;
+}
+.feedback_wrapper form input:nth-child(2){
+    margin: 18px 5px 8px 5px;
+}
+.feedback_wrapper form input:last-child{
+    width: 180px;
+    height: 45px;
+    background-color: #ec644b;
+    font-size: 12px;
+    padding: 0;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: #ffffff;
+    margin: 17px 0 25px 0;
+}
+.feedback_wrapper form textarea{
+    width: 813px;
+    height: 71px;
+    background-color: #ffffff;
+    border: 1.0px solid rgba(0,0,0,0.21);
+    border-radius: 8px;
+    display: block;
+    margin: 0 auto;
+}
+/* map */
+.map{
+    height: 500px;
+    background: url('../img/map/map.jpg') center center/cover no-repeat;
+}
+/* map */
 
-/* #map{
-    width: 100%; height: 100%; padding: 0; margin: 0;
-} */
+/* footer */
+.footer{
+    background-color: #25333c;
+}
+.footer_menu{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.footer img{
+    width: 68px;
+    height: 71px;
+    margin-top: 24px;
+}
+.footer .footer_content{
+    font-size: 16px;
+    font-weight: 700;
+    color: #ffffff;
+    margin-top: 20px;
+    align-self: center;
+    flex: 0 0 55%;
+}
+.footer_right_menu{
+    display: flex;
+    align-self: center;
+}
+.footer_right_menu a{
+    text-align: right;
+    text-decoration: none;
+    align-self: center;
+    margin-right: 10px;
+}
+.footer_right_menu .footer_nav_btn{
+    width: 160px;
+    height: 45px;
+    background-color: #ec644b;
+    border: none;
+    border-radius: 30px;
+    cursor: pointer;
+}
+.footer_right_menu li{
+    font-size: 19px;
+    font-weight: 700;
+    color: #ffffff;
+}
+.footer_right_menu ul li span{
+    font-size: 14px;
+    line-height: 24px;
+    font-weight: 300;
+    color: #ffffff;
+}
+.footer_right_menu .footer_nav_btn a{
+    font-size: 12px;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: #ffffff;
+}
+.footer .footer_divider{
+    opacity: 0.6;
+    margin-top: 26px;
+    max-width: 100%;
+    height: 2px;
+    background-color: #c7c6c6;
+}
+.footer_nav ul{
+    margin-top: 30px;
+    padding-bottom: 36px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.footer_nav ul li a{
+    text-decoration: none;
+    opacity: 0.6;
+    font-size: 13px;
+    font-weight: 300;
+    color: #ffffff;
+    padding-bottom: 5px;
+}
+.footer_nav ul li a:hover{
+    color: #ec644b;
+    border-bottom: 1px solid #ec644b;
+}
+/* footer */
 
 /* media */
 
@@ -671,7 +823,7 @@ html{
     .header h3{
         padding-top: 130px;
     }
-    body.lock{
+    body .lock{
         overflow: hidden;
     }
     .content{
@@ -774,6 +926,51 @@ html{
     }
     .slick-arrow.slick-prev{
         left: 25%;
+    }
+    .footer_right_menu{
+        margin-top: 20px;
+    }
+    .footer .footer_content{
+        font-size: 14px;
+        font-weight: 700;
+        color: #ffffff;
+        
+    }
+}
+
+@media (max-width: 748px){
+    .footer_menu{
+        justify-content: center;
+    }
+    .footer .footer_content{
+        flex: 0 0 90%;
+        text-align: center;
+    }
+    .footer .footer_right_menu{
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .footer .footer_right_menu .footer_nav_btn{
+        margin-top: 20px;
+    }
+}
+
+@media (max-width: 486px){
+    .footer .footer_nav{
+        justify-content: center;
+    }
+    .footer .footer_nav ul{
+        justify-content: center;
+        
+    }
+    .footer .footer_nav li{
+        margin: 5px 0;
+        flex: 0 0 90%;
+    }
+    .footer .footer_nav li a{
+        display: block;
+        text-align: center;
+
     }
 }
 
