--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+*{
+    outline: none;
+}
 body{
     font-family: Roboto;
 }
@@ -74,7 +77,7 @@ body{
     background: #f3f3f3;
     position: fixed;
     top: 0; left: 0; right: 0; bottom: 0;
-     margin: auto;
+    margin: auto;
     display: none;
     opacity: 0;
     z-index: 38;
